When army moves to players own castles and docks, emojis were disapear. This bug is fixed. When user click on Dock position, even if there was a dock, the dock settle modal was openning. This issue is fixed. Because of the number of 5 army, the items in the army info bar was not fitting. Overflow scrolling is added to Army Info Drawer.

--- a/packages/client/src/styles/globals.css
+++ b/packages/client/src/styles/globals.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    -ms-overflow-style: none;
+}
+
+body {
+    scrollbar-width: none;
+}
+
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
@@ -386,6 +398,20 @@ input::-webkit-inner-spin-button {
     top: 0;
     left: -400px;
     transition: left 0.3s ease;
+}
+
+.army-info-drawer::-webkit-scrollbar {
+    width: 10px;
+}
+
+.army-info-drawer::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+.army-info-drawer::-webkit-scrollbar-thumb {
+    background: rgb(106, 106, 106);
+    border-radius: 10px;
 }
 
 .army-info-drawer.open {
